--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glumate-backend",
+  "name": "LifeLink-backend",
   "version": "1.0.0",
   "description": "PIM Back-end project",
   "main": "index.js",
@@ -17,11 +17,15 @@
   "author": "DevCrew",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "firebase-admin": "^12.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
