--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "author": "DevCrew",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-validator": "^7.0.1",
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -32,6 +34,7 @@
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "otp-generator": "^4.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.2"
   }
 }
